--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 
-<!-- margin bottom 3 -->
-<div class="container">
-     <div class="mb-3">
-        <label for="usuario" class="form-label">usuario:</label>
-        <input type="text" class="form-control" id="usuario"> 
-        <span id="mensaje" class="form-text"></span>
+<form id="inicio">
+    <div class="container mt-4">
+        <div class="mb-3">
+            <label for="usuario" class="form-label">Usuario:</label>
+            <input type="text" class="form-control" id="usuario">
+            <span id="mensajeUsuario" class="text-danger small"></span>
+        </div>
+        <div class="mb-3">
+            <label for="password" class="form-label">Contraseña:</label>
+            <div class="input-group">
+                <input type="password" class="form-control" id="password">
+                <button type="button" class="btn btn-outline-secondary" id="mostrar">Mostra</button>
+            </div>
+            <small>Caracteres: <span id="contador">0</span></small>
+            <div id="fuerza" class="small mt-1"></div>
+        </div>
+
+        <button type="submit" class="btn btn-primary" id="enviar">Enviar </button>
+
+        <div id="mensajeLogin" class="mt-3"></div>
+
     </div>
-    <div class="mb-3">
-        <label for="password" class="form-label">contraseña:</label>
-        <input type="password" class="form-control" id="password">
-    </div>
-</div>
+</form>
+
 <script src="validacion.js"></script>
+
